--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "uuid": "^9.0.0",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
+  },
+  "dependencies": {
+    "firebase": "^9.22.2"
   }
 }
